trying to fix font on safari

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -5,6 +5,9 @@ html, body {
     padding: 0px;
     overflow-x: hidden;
     /* background-color: black; */
+
+}
+p {
     -webkit-font-smoothing: antialiased;
 
 }
